--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,52 @@
-# Logs
-logs
-*.log
+# Node / Vite
+node_modules/
+dist/
+.vite/
 npm-debug.log*
-yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+package-lock.json
+yarn.lock
 
-node_modules
-dist
-dist-ssr
-*.local
+# TypeScript
+*.tsbuildinfo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# React / frontend
+.env
+*.env.local
+*.env.*.local
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Docker
+# Ignore local images and volumes
+docker-compose.override.yml
+*.log
+*.tmp
+**/tmp/
+**/cache/
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# Optional: if you build your Docker images locally
+*.dockerfile
+
+# Python / backend (if any)
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+venv/
+env/
+ENV/
+.Python
+
+# Logs
+*.log
+
+# IDE / Editor
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# MacOS
+.DS_Store
