--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,33 @@
-# Multi-stage build for production optimization (root-level)
+# Multi-stage build for production optimization (frontend-level)
 FROM node:22-alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
-WORKDIR /app/frontend
+WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY frontend/package.json frontend/package-lock.json* ./
+COPY package.json package-lock.json* ./
 # Install full dependencies (dev + prod) to support building with Vite/Rollup
 RUN npm ci
 
 # Rebuild the source code only when needed
 FROM base AS builder
-WORKDIR /app/frontend
-COPY --from=deps /app/frontend/node_modules ./node_modules
-COPY frontend/. .
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+
+# Build arguments for Vite environment variables
+ARG VITE_SUPABASE_URL
+ARG VITE_SUPABASE_PUBLISHABLE_KEY
+
+# Set environment variables for build
+ENV VITE_SUPABASE_URL=$VITE_SUPABASE_URL
+ENV VITE_SUPABASE_PUBLISHABLE_KEY=$VITE_SUPABASE_PUBLISHABLE_KEY
+ENV NODE_ENV=production
 
 # Build the application
-ENV NODE_ENV=production
 RUN npm run build
 
 # Production image, copy all the files and run nginx
@@ -27,9 +35,9 @@ FROM nginx:alpine AS runner
 WORKDIR /app
 
 # Copy the built application
-COPY --from=builder /app/frontend/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration from repo root
+# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
