ml model integrated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,27 @@
 services:
+  # Python ML Service (NEW)
+  ml-service:
+    build: ./ml-service
+    container_name: purity_ml
+    ports:
+      - "8001:8001"
+    environment:
+      - ENVIRONMENT=production
+      - MODEL_TYPE=baseline
+      - DEVICE=cpu
+    volumes:
+      - ./ml-service/models:/app/models
+      - ./ml-service/data:/app/data
+      - ./ml-service/logs:/app/logs
+    networks:
+      - purity-vision-network
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8001/api/ml/health')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   backend:
     build:
       context: ./backend
@@ -15,8 +38,12 @@ services:
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - ML_SERVICE_URL=http://ml-service:8001
     networks:
       - purity-vision-network
+    depends_on:
+      ml-service:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
       interval: 30s
