--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
