--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,21 +1,25 @@
-# FastAPI and Server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
+# Build tools (required for Python 3.13)
+setuptools>=69.0.0
+wheel>=0.42.0
 
-# ML Core
-numpy==1.24.3
-scipy==1.11.3
-scikit-learn==1.3.2
-torch==2.1.0
+# FastAPI and Server
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
+python-multipart>=0.0.6
+python-dotenv>=1.0.0
+
+# ML Core (using more compatible versions)
+numpy>=1.24.0,<2.0.0
+scipy>=1.11.0
+scikit-learn>=1.3.0
+torch>=2.0.0,<2.2.0
 
 # HuggingFace (for baseline)
-transformers==4.35.2
+transformers>=4.35.0
 
 # Data Processing
-pandas==2.1.3
+pandas>=2.1.0
 joblib==1.3.2
 
 # Logging
@@ -25,7 +29,10 @@ loguru==0.7.2
 pytest==7.4.3
 httpx==0.25.1
 
+# Visualization and plotting
+matplotlib==3.8.2
+pillow==10.1.0
+
 # Optional: For Jupyter notebooks
 # jupyter==1.0.0
-# matplotlib==3.8.2
 # seaborn==0.13.0
